增加读文件到数据库的操作

--- a/.settings/com.springsource.sts.config.flow.prefs
+++ b/.settings/com.springsource.sts.config.flow.prefs
@@ -1,2 +1,3 @@
+//com.springsource.sts.config.flow.coordinates\:http\://www.springframework.org/schema/batch\:/spring-batch-demo/src/main/resources/META-INF/spring/spring-batch-job-file2db.xml=<?xml version\="1.0" encoding\="UTF-8"?>\n<graph>\n<element clazz\="JobModelElement" type\="job">\n<structure end\="1131" endstart\="1119" start\="499" startend\="530"/>\n<bounds height\="118" width\="144" x\="15" y\="17"/>\n</element>\n</graph>
 //com.springsource.sts.config.flow.coordinates\:http\://www.springframework.org/schema/batch\:/spring-batch-demo/src/main/resources/spring-context.xml=<?xml version\="1.0" encoding\="UTF-8"?>\n<graph/>
 eclipse.preferences.version=1
